# alembic-js

./: .gitignore  CMakeLists.txt  README.md  package.json  tsconfig.json
addons/: AbcInfo.cpp  AbcInfo.h  register.cpp
resource/: Ancient_Kettle.abc
src/: bindings.ts  index.ts
